--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,6 @@
 # .env
 
+# YYYY-MM-DD
 # The date at which CMU releases RD and we start requiring commitment letters
 RD_DATE=""
 # The date at which to require andrew id authentication
