Add env updates

--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,6 @@
-# .env
+# Ports
+BACKEND_PORT=8080
+FRONTEND_PORT=5173
 
 # YYYY-MM-DD
 # The date at which CMU releases RD and we start requiring commitment letters
@@ -7,5 +9,10 @@ RD_DATE=""
 ANDREW_DATE=""
 
 # Database config and admin accesses
-DB_NAME=posts
-ADMIN_EMAILS="ANDREWID@andrew.cmu.edu"
+ADMIN_EMAILS="etashjha@andrew.cmu.edu"
+
+# .env modifications
+PGDATA=.pg_data
+PGHOST=tmp
+LOGFILE=.pg_data/logfile
+DATABASE_URL="host=tmp user=postgres dbname=postgres sslmode=disable"
