Fix DB schema and storage dir

--- a/.env.sample
+++ b/.env.sample
@@ -15,4 +15,4 @@ ADMIN_EMAILS="etashjha@andrew.cmu.edu"
 PGDATA=.pg_data
 PGHOST=tmp
 LOGFILE=.pg_data/logfile
-DATABASE_URL="host=tmp user=postgres dbname=postgres sslmode=disable"
+DATABASE_URL="host=tmp user=postgres dbname=cmuinsta sslmode=disable"
